# The-encrypted-calculator

./: .gitignore  Anchor.toml  README.md  package.json
app/: .env  package.json  tsconfig.app.json  vercel.json  vite.config.ts
app/src/: App.tsx  WalletProvider.tsx  index.css  main.tsx  useArciumCompute.ts
app/src/idl/: hello_world.json
app/src/types/: hello_world.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/hello_world/: Cargo.toml
programs/hello_world/src/: lib.rs
scripts/: init-devnet.ts
server/: package.json  tsconfig.json
server/src/: arcium-client.ts  index.ts
tests/: hello_world.ts
